[gd_scene load_steps=17 format=3 uid="uid://donnvmvbqack2"]

[ext_resource type="Script" uid="uid://bes2y6x8kph2i" path="res://itch_login.gd" id="1_63mqi"]
[ext_resource type="Script" uid="uid://bsa6o5ox4ok1a" path="res://input_quit_game_controller.gd" id="3_147q3"]
[ext_resource type="Script" uid="uid://p3d4p8j8pknk" path="res://browser_launcher.gd" id="4_0oqte"]
[ext_resource type="Script" uid="uid://cg27bp0xwfy4t" path="res://cave_launcher.gd" id="4_rm38c"]
[ext_resource type="PackedScene" uid="uid://bi4mxp4w8msr" path="res://ui/games/games_ui_controller.tscn" id="5_ipikq"]
[ext_resource type="Script" uid="uid://vcqtsco552dp" path="res://image_cache/image_loader.gd" id="6_f0yp7"]
[ext_resource type="Script" uid="uid://dl47qghvx374s" path="res://input_editor_quit.gd" id="6_ipikq"]
[ext_resource type="PackedScene" uid="uid://3xjflh5pkjeb" path="res://ui/main_ui_state_manager.tscn" id="6_k6ji6"]
[ext_resource type="Script" uid="uid://wqchuqxpjksy" path="res://game_ui_state_controller.gd" id="6_lm0l2"]
[ext_resource type="PackedScene" uid="uid://tqukidx1wx50" path="res://logging/log_display.tscn" id="7_0oqte"]
[ext_resource type="PackedScene" uid="uid://bxltecj7uxmp3" path="res://ui/choice_selector/choice_selector.tscn" id="7_hqorg"]
[ext_resource type="Texture2D" uid="uid://dauc0iow3vvll" path="res://icon.svg" id="7_kruq0"]
[ext_resource type="Script" uid="uid://bybbytduq32gx" path="res://ui/ui_state_entry.gd" id="8_oxlym"]
[ext_resource type="Texture2D" uid="uid://bow1b6jqokd1j" path="res://icons/keyvisual_rot.png" id="10_e0flb"]
[ext_resource type="Script" uid="uid://bqxwdwj6mso0a" path="res://games_ui_focus_controller.gd" id="10_yw4le"]
[ext_resource type="Script" uid="uid://dig5yux8t4imh" path="res://launch_state_ui_controller.gd" id="15_kmtyy"]

[node name="Main" type="Node" node_paths=PackedStringArray("cave_launcher", "games_ui", "games_ui_state", "choicer", "main_ui_manager", "game_ui_state_controller", "cover_image_loader", "logs", "launch_state_ui_controllers")]
script = ExtResource("1_63mqi")
cave_launcher = NodePath("cave_launcher")
games_ui = NodePath("CanvasLayer/MainUiStateManager/state_games_ui_controller/games_ui_controller")
games_ui_state = NodePath("CanvasLayer/MainUiStateManager/state_games_ui_controller")
choicer = NodePath("CanvasLayer/ChoiceSelector")
main_ui_manager = NodePath("CanvasLayer/MainUiStateManager")
game_ui_state_controller = NodePath("game_ui_state_controller")
cover_image_loader = NodePath("image_loader")
logs = NodePath("CanvasLayer/log_display")
launch_state_ui_controllers = [NodePath("CanvasLayer/MainUiStateManager/state_ui_launching/ui_launching_controller"), NodePath("CanvasLayer/MainUiStateManager/state_ui_running/ui_running_controller")]
metadata/_custom_type_script = "uid://bes2y6x8kph2i"

[node name="input_quit_game_controller" type="Node" parent="."]
script = ExtResource("3_147q3")
metadata/_custom_type_script = "uid://bsa6o5ox4ok1a"

[node name="cave_launcher" type="Node" parent="." node_paths=PackedStringArray("quit_input_handler", "browser_launcher")]
script = ExtResource("4_rm38c")
quit_input_handler = NodePath("../input_quit_game_controller")
browser_launcher = NodePath("browser_launcher")
metadata/_custom_type_script = "uid://cg27bp0xwfy4t"

[node name="browser_launcher" type="Node" parent="cave_launcher"]
script = ExtResource("4_0oqte")
metadata/_custom_type_script = "uid://p3d4p8j8pknk"

[node name="input_editor_quit" type="Node" parent="." node_paths=PackedStringArray("launcher")]
script = ExtResource("6_ipikq")
launcher = NodePath("../cave_launcher")

[node name="image_loader" type="Node" parent="."]
script = ExtResource("6_f0yp7")
fallback_image = ExtResource("7_kruq0")
metadata/_custom_type_script = "uid://vcqtsco552dp"

[node name="game_ui_state_controller" type="Node" parent="." node_paths=PackedStringArray("main_ui", "launcher", "games_ui", "launching_ui", "running_ui")]
script = ExtResource("6_lm0l2")
main_ui = NodePath("../CanvasLayer/MainUiStateManager")
launcher = NodePath("../cave_launcher")
games_ui = NodePath("../CanvasLayer/MainUiStateManager/state_games_ui_controller")
launching_ui = NodePath("../CanvasLayer/MainUiStateManager/state_ui_launching")
running_ui = NodePath("../CanvasLayer/MainUiStateManager/state_ui_running")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="BG" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/BG"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/BG"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Expander" type="Control" parent="CanvasLayer/BG/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/BG/VBoxContainer"]
layout_mode = 2
texture = ExtResource("10_e0flb")
expand_mode = 5
stretch_mode = 4

[node name="log_display" parent="CanvasLayer" instance=ExtResource("7_0oqte")]

[node name="MainUiStateManager" parent="CanvasLayer" instance=ExtResource("6_k6ji6")]

[node name="state_games_ui_controller" type="Control" parent="CanvasLayer/MainUiStateManager"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("8_oxlym")
metadata/_custom_type_script = "uid://bybbytduq32gx"

[node name="games_ui_controller" parent="CanvasLayer/MainUiStateManager/state_games_ui_controller" node_paths=PackedStringArray("launcher") instance=ExtResource("5_ipikq")]
layout_mode = 1
launcher = NodePath("../../../../cave_launcher")

[node name="games_ui_focus_controller" type="Node" parent="CanvasLayer/MainUiStateManager/state_games_ui_controller" node_paths=PackedStringArray("games_ui", "games_ui_state")]
script = ExtResource("10_yw4le")
games_ui = NodePath("../games_ui_controller")
games_ui_state = NodePath("..")

[node name="state_ui_launching" type="Control" parent="CanvasLayer/MainUiStateManager"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("8_oxlym")
metadata/_custom_type_script = "uid://bybbytduq32gx"

[node name="ui_launching" type="Control" parent="CanvasLayer/MainUiStateManager/state_ui_launching"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/MainUiStateManager/state_ui_launching/ui_launching"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -420.0
offset_top = 10.0
offset_right = 420.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 12

[node name="Expander" type="Control" parent="CanvasLayer/MainUiStateManager/state_ui_launching/ui_launching/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="GameImage" type="TextureRect" parent="CanvasLayer/MainUiStateManager/state_ui_launching/ui_launching/VBoxContainer"]
custom_minimum_size = Vector2(0, 170)
layout_mode = 2
texture = ExtResource("10_e0flb")
expand_mode = 1
stretch_mode = 5

[node name="LilSpace" type="Control" parent="CanvasLayer/MainUiStateManager/state_ui_launching/ui_launching/VBoxContainer"]
custom_minimum_size = Vector2(0, 5)
layout_mode = 2

[node name="LabelDE" type="Label" parent="CanvasLayer/MainUiStateManager/state_ui_launching/ui_launching/VBoxContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "&&gamename&& wird gestartet, gleich geht's los!"
horizontal_alignment = 1
autowrap_mode = 3

[node name="HSeparator" type="HSeparator" parent="CanvasLayer/MainUiStateManager/state_ui_launching/ui_launching/VBoxContainer"]
layout_mode = 2

[node name="LabelEN" type="Label" parent="CanvasLayer/MainUiStateManager/state_ui_launching/ui_launching/VBoxContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Starting &&gamename&&, it's gonna happen every second now!"
horizontal_alignment = 1
autowrap_mode = 3

[node name="Expander2" type="Control" parent="CanvasLayer/MainUiStateManager/state_ui_launching/ui_launching/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ui_launching_controller" type="Node" parent="CanvasLayer/MainUiStateManager/state_ui_launching" node_paths=PackedStringArray("launcher", "tex_rect", "labels")]
script = ExtResource("15_kmtyy")
launcher = NodePath("../../../../cave_launcher")
tex_rect = NodePath("../ui_launching/VBoxContainer/GameImage")
labels = [NodePath("../ui_launching/VBoxContainer/LabelDE"), NodePath("../ui_launching/VBoxContainer/LabelEN")]

[node name="state_ui_running" type="Control" parent="CanvasLayer/MainUiStateManager"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("8_oxlym")
metadata/_custom_type_script = "uid://bybbytduq32gx"

[node name="ui_running" type="Control" parent="CanvasLayer/MainUiStateManager/state_ui_running"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/MainUiStateManager/state_ui_running/ui_running"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -420.0
offset_top = 10.0
offset_right = 420.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 12

[node name="Expander" type="Control" parent="CanvasLayer/MainUiStateManager/state_ui_running/ui_running/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="GameImage" type="TextureRect" parent="CanvasLayer/MainUiStateManager/state_ui_running/ui_running/VBoxContainer"]
custom_minimum_size = Vector2(0, 170)
layout_mode = 2
texture = ExtResource("10_e0flb")
expand_mode = 1
stretch_mode = 5

[node name="LilSpace" type="Control" parent="CanvasLayer/MainUiStateManager/state_ui_running/ui_running/VBoxContainer"]
custom_minimum_size = Vector2(0, 5)
layout_mode = 2

[node name="LabelDE" type="Label" parent="CanvasLayer/MainUiStateManager/state_ui_running/ui_running/VBoxContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "&&gamename&& läuft! Falls das nicht stimmt, halte die Escape-Taste gedrückt, um zur Spielauswahl zurückzukehren."
horizontal_alignment = 1
autowrap_mode = 3

[node name="HSeparator" type="HSeparator" parent="CanvasLayer/MainUiStateManager/state_ui_running/ui_running/VBoxContainer"]
layout_mode = 2

[node name="LabelEN" type="Label" parent="CanvasLayer/MainUiStateManager/state_ui_running/ui_running/VBoxContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "&&gamename&& is running! If it isn't, hold the Escape key to return to the game selection screen."
horizontal_alignment = 1
autowrap_mode = 3

[node name="Expander2" type="Control" parent="CanvasLayer/MainUiStateManager/state_ui_running/ui_running/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ui_running_controller" type="Node" parent="CanvasLayer/MainUiStateManager/state_ui_running" node_paths=PackedStringArray("launcher", "tex_rect", "labels")]
script = ExtResource("15_kmtyy")
launcher = NodePath("../../../../cave_launcher")
tex_rect = NodePath("../ui_running/VBoxContainer/GameImage")
labels = [NodePath("../ui_running/VBoxContainer/LabelDE"), NodePath("../ui_running/VBoxContainer/LabelEN")]

[node name="ChoiceSelector" parent="CanvasLayer" instance=ExtResource("7_hqorg")]
visible = false
